Call TerminateInstanceInAutoScalingGroup to terminate if using an ASG (#462)
* Call TerminateInstanceInAutoScalingGroup to terminate if using an ASG

* Fixed the tests

* Add permission to README

* Remove deprecated code